--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsts": "^2.5.0",
     "ol": "^6.3.1"
   },
   "devDependencies": {
