--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel index.html",
+    "server": "./server.js",
     "build": "parcel build --public-url . index.html"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "jsts": "^2.5.0",
-    "ol": "^6.3.1"
+    "mysql": "^2.18.1",
+    "ol": "^6.3.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4"
