--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colormap": "^2.3.1",
     "jsts": "^2.5.0",
     "mysql": "^2.18.1",
     "ol": "^6.3.1",
