mongodb instead of mysql

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MYSLQ_HOST = localhost
-MYSLQ_USER = MYSLQ_USER
-MYSLQ_PASSWORD = MYSLQ_PASSWORD
-MYSLQ_DATABASE = MYSLQ_DATABASE
+MONGODB_CLUSTER_URL = localhost:27017
+MONGODB_USER = MONGODB_USER
+MONGODB_PASSWORD = MONGODB_PASSWORD
+MONGODB_DATABASE = MONGODB_DATABASE
