--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "colormap": "^2.3.1",
     "dotenv": "^8.2.0",
     "jsts": "^2.6.1",
-    "mysql": "^2.18.1",
+    "mongodb": "^3.6.3",
     "ol": "^6.4.3",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1"
